--- a/eshell/history
+++ b/eshell/history
@@ -1,50 +1,3 @@
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-381
-381
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby rdparse.rb
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
-ruby tester.rb 
 ruby tester.rb 
 ruby tester.rb 
 ruby tester.rb 
@@ -125,4 +78,51 @@ make
 ./a.out 
 cd ../build/
 make
+./a.out 
+ls
+cd
+ls
+rm -fr emacsconfig/
+ls
+g++ --version
+cd ../build/
+make
+g++ -std=c++1y
+g++ -std=c++1y test.cc 
+g++ -std=c++1y test.cc 
+g++-5 -std=c++14 test.cc 
+g++ -std=c++14 test.cc 
+gcc-5 -std=c++14 test.cc
+g++-5 -std=c++14 test.cc 
+g++-5 -std=c++14 test.cc 
+cd ../build/
+make
+cd ../src/
+ls
+make enemy_factory.o
+cd ../build/
+make
+make
+cd ../build/
+make
+make
+make
+make
+from ../src/enemy_generator.cc:1:
+make
+make
+../src/blaster.cc: At global scope:
+make
+make
+make
+make
+make
+make
+make
+cd ../build/
+make
+make
+cd ../build/
+make
+./a.out 
 ./a.out 
