--- a/eshell/history
+++ b/eshell/history
@@ -1,101 +1,3 @@
-make
-./a.out 
-makle
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-.7a
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-cd ../build/
-ls
-make
-./a.out 
-ruby tests.rb 
-cd ../DEL_01/
-ls
-ruby tests.rb 
-cd ../build/
-make
-./a.out 
-make
-./a.out 
-cd ../build/
-make
-./a.out 
-cd ../build/
-make
-./a.out 
-ls
-cd
-ls
-rm -fr emacsconfig/
-ls
-g++ --version
-cd ../build/
-make
-g++ -std=c++1y
-g++ -std=c++1y test.cc 
-g++ -std=c++1y test.cc 
-g++-5 -std=c++14 test.cc 
-g++ -std=c++14 test.cc 
-gcc-5 -std=c++14 test.cc
-g++-5 -std=c++14 test.cc 
-g++-5 -std=c++14 test.cc 
-cd ../build/
-make
-cd ../src/
-ls
-make enemy_factory.o
-cd ../build/
-make
-make
-cd ../build/
-make
-make
-make
-make
-from ../src/enemy_generator.cc:1:
-make
-make
 ../src/blaster.cc: At global scope:
 make
 make
@@ -126,3 +28,101 @@ cd ../build/
 ls
 make clean
 ls
+cd ../build/
+make
+cd ../build/
+make
+git clone git@gitlab.ida.liu.se:jonve547/tdp005-spel.git
+git clone git@gitlab.ida.liu.se:jonve547/TDP005-spel.git
+cd TDP005-spel/
+ls
+cd ../build/
+make
+cd ../build/
+make
+git clone git@gitlab.ida.liu.se:jonve547/TDP005-spel.git
+cd TDP005-spel/
+git pull origin jonas
+git checkout jonas
+make
+ls
+git branch
+git checkout master
+maek
+make
+cd ../B
+cd ../build/
+ls
+make
+cd ../build/
+ls
+ms
+make
+cd ../B
+cd ../build/
+make
+cd ../build/
+make
+make
+make
+make
+make
+make
+make
+make
+make
+make
+make
+./a.out 
+cd ../build/
+make
+./a.out 
+cd ../build/
+make
+./a.out 
+make
+./a.out 
+cd ../build/
+make
+./a.out 
+make
+./a.out 
+./a.out 
+cd ../build/
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make
+./a.out 
+make clean
+make
+./a.out
+make
+cd ../build/
+make
+./a.out 
+,b
+make
+./a.out 
+make
+./a.out 
+./a.out 
+make
+./a.out 
