--- a/eshell/history
+++ b/eshell/history
@@ -1,128 +1,128 @@
-../src/blaster.cc: At global scope:
-make
-make
-make
-make
-make
-make
-make
-cd ../build/
-make
-make
-cd ../build/
-make
-./a.out 
-./a.out 
-cd ../build/
-make
-make
-make
-cd ../build/
-make
-cd ../build/
-ls
-make
-cd ../build/
-ls
-cd ../build/
-ls
-make clean
-ls
-cd ../build/
-make
-cd ../build/
-make
-git clone git@gitlab.ida.liu.se:jonve547/tdp005-spel.git
-git clone git@gitlab.ida.liu.se:jonve547/TDP005-spel.git
-cd TDP005-spel/
-ls
-cd ../build/
-make
-cd ../build/
-make
-git clone git@gitlab.ida.liu.se:jonve547/TDP005-spel.git
-cd TDP005-spel/
-git pull origin jonas
-git checkout jonas
-make
-ls
-git branch
-git checkout master
-maek
-make
-cd ../B
-cd ../build/
-ls
-make
-cd ../build/
-ls
-ms
-make
-cd ../B
-cd ../build/
-make
-cd ../build/
-make
-make
-make
-make
-make
-make
-make
-make
-make
-make
-make
-./a.out 
-cd ../build/
-make
-./a.out 
-cd ../build/
-make
-./a.out 
-make
-./a.out 
-cd ../build/
-make
-./a.out 
-make
-./a.out 
-./a.out 
-cd ../build/
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make
-./a.out 
-make clean
-make
-./a.out
-make
-cd ../build/
-make
-./a.out 
-,b
-make
-./a.out 
-make
-./a.out 
-./a.out 
-make
-./a.out 
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make test
+make clobber 
+make test
+make clobber 
+make test
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+a,b
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
+make clobber 
+make test
